; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/extr_filesystems.c_fs_maxindex.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/extr_filesystems.c_fs_maxindex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file_system_type = type { %struct.file_system_type* }

@file_systems_lock = common dso_local global i32 0, align 4
@file_systems = common dso_local global %struct.file_system_type* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @fs_maxindex to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fs_maxindex() #0 {
  %1 = alloca %struct.file_system_type*, align 8
  %2 = alloca i32, align 4
  %3 = call i32 @read_lock(i32* @file_systems_lock)
  %4 = load %struct.file_system_type*, %struct.file_system_type** @file_systems, align 8
  store %struct.file_system_type* %4, %struct.file_system_type** %1, align 8
  store i32 0, i32* %2, align 4
  br label %5

5:                                                ; preds = %9, %0
  %6 = load %struct.file_system_type*, %struct.file_system_type** %1, align 8
  %7 = icmp ne %struct.file_system_type* %6, null
  br i1 %7, label %8, label %15

8:                                                ; preds = %5
  br label %9

9:                                                ; preds = %8
  %10 = load %struct.file_system_type*, %struct.file_system_type** %1, align 8
  %11 = getelementptr inbounds %struct.file_system_type, %struct.file_system_type* %10, i32 0, i32 0
  %12 = load %struct.file_system_type*, %struct.file_system_type** %11, align 8
  store %struct.file_system_type* %12, %struct.file_system_type** %1, align 8
  %13 = load i32, i32* %2, align 4
  %14 = add nsw i32 %13, 1
  store i32 %14, i32* %2, align 4
  br label %5

15:                                               ; preds = %5
  %16 = call i32 @read_unlock(i32* @file_systems_lock)
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32 @read_lock(i32*) #1

declare dso_local i32 @read_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
